HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameDiagnostic/Expected.uv
//! Expected diagnostic metadata for the FrameDiagnostic rejected-source specimen.

expectedDiagnostic("", "diag.18.Frame")
